chore: add config values for ssi process
add document type configuration for ssi submit processes

Refs: CPLP-2854

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -320,6 +320,11 @@ backend:
         #   value: "portaldb"
         # - name: "HEALTHCHECKS__0__TAGS__2"
         #   value: "provisioningdb"
+    companyData:
+      useCaseParticipationMediaTypes:
+        type0: "PDF"
+      ssiCertificateMediaTypes:
+        type0: "PDF"
     connectors:
       validCertificationContentTypes:
         type0: "application/x-pem-file"
