--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -27,8 +27,8 @@ bpdmPartnersPoolAddress: "https://partners-pool-pen.dev.demo.catena-x.net"
 bpdmPortalGateAddress: "https://portal-gate-pen.dev.demo.catena-x.net"
 custodianAddress: "https://managed-identity-wallets-pen.dev.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory-pen.dev.demo.catena-x.net"
-clearinghouseAddress: "https://validation.dev.dih-cloud.com"
-clearinghouseTokenAddress: "https://iam.dev.dih-cloud.com/realms/notarisation/protocol/openid-connect/token"
+clearinghouseAddress: "https://validation.test.dih-cloud.com"
+clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
 
 frontend:
 
@@ -296,7 +296,7 @@ backend:
       clientId: "<path:portal/data/processes-worker#bpdm-client-id>"
       clientSecret: "<path:portal/data/pen/processes-worker#bpdm-client-secret>"
     clearinghouse:
-      clientId: "<path:portal/data/processes-worker#clearinghouse-client-id>"
+      clientId: "<path:portal/data/pen/processes-worker#clearinghouse-client-id>"
       clientSecret: "<path:portal/data/pen/processes-worker#clearinghouse-client-secret>"
     custodian:
       clientId: "<path:portal/data/processes-worker#custodian-client-id>"
