feat(seeding): add configuration for seeding path
Refs: CPLP-2788

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -511,6 +511,7 @@ backend:
       #   memory: 256Mi
     seeding:
       testDataEnvironments: ""
+      testDataPaths: "Seeder/Data"
   portalmaintenance:
     name: "portal-maintenance"
     image:
