--- a/charts/portal/templates/job-backend-portal-migrations.yaml
+++ b/charts/portal/templates/job-backend-portal-migrations.yaml
@@ -62,6 +62,8 @@ spec:
           {{- end }}
           - name: "SEEDING__TESTDATAENVIRONMENTS__0"
             value: "{{ .Values.backend.portalmigrations.seeding.testDataEnvironments }}"
+          - name: "SEEDING__DATAPATHS__0"
+            value: "{{ .Values.backend.portalmigrations.seeding.testDataPaths }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
