--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -64,10 +64,11 @@ jobs:
       - name: Run chart-testing (lint)
         run: ct lint --charts charts/portal --config charts/chart-testing-config.yaml
 
-      # install the chart to the kind cluster and run helm test
-      # define charts to test with the --charts parameter
-      - name: Run chart-testing (install)
-        run: ct install --charts charts/portal --config charts/chart-testing-config.yaml
+      - name: Run helm install
+        run: |
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
+          helm install portal charts/portal --create-namespace install
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
 
         # Upgrade the released portal chart version with the locally available chart
@@ -75,7 +76,7 @@ jobs:
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
-          helm install portal tractusx-dev/portal --version ${{ github.event.inputs.upgrade_from || '1.3.0' }}
+          helm install portal tractusx-dev/portal --version ${{ github.event.inputs.upgrade_from || '1.3.0' }} --create-namespace upgrade
           helm dependency update charts/portal
           helm upgrade portal charts/portal
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
