chore: disable daps
the daps call within the backend is configurable and should be disabled for now

Refs: CPLP-2702

--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -189,6 +189,8 @@ spec:
           value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.administration.connectors.selfDescriptionDocumentPath }}"
         - name: "DAPS__CLIENTID"
           value: "{{ .Values.backend.administration.daps.clientId }}"
+        - name: "DAPS__ISACTIVE"
+          value: "{{ .Values.backend.administration.daps.isActive }}"
         - name: "DAPS__CLIENTSECRET"
           valueFrom:
             secretKeyRef:
