chore: edit daps api path
Refs: CPLP-2932

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -334,7 +334,7 @@ backend:
       selfDescriptionDocumentPath: /api/administration/documents/selfDescription
     keycloakClientId: "Cl2-CX-Portal"
     daps:
-      apiPath: "/api/v1/daps"
+      apiPath: "/api/v1/daps/"
       scope: "openid"
       grantType: "client_credentials"
       # -- Provide daps client-id from CX IAM centralidp.
