chore: change configuration for logging

--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -281,9 +281,9 @@ spec:
               key: "shared-client-secret"
         - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
           value: "{{ .Values.sharedidpAddress }}"
-        - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.ADMINISTRATION.SERVICE.BUSINESSLOGIC"
+        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.ADMINISTRATION.SERVICE.BUSINESSLOGIC"
           value: "{{ .Values.backend.administration.logging.businessLogic }}"
-        - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.SDFACTORY.LIBRARY"
+        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.SDFACTORY.LIBRARY"
           value: "{{ .Values.backend.administration.logging.sdfactoryLibrary }}"
         - name: "MAILINGSERVICE__MAIL__SMTPHOST"
           value: "{{ .Values.backend.mailing.host }}"
