--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -200,15 +200,15 @@ spec:
                   key: "shared-client-secret"
             - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
               value: "{{ .Values.sharedidpAddress }}"
-            - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.PROCESSES.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.PROCESSES.LIBRARY"
               value: "{{ .Values.backend.processesworker.logging.checklistLibrary }}"
-            - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.BPDM.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.BPDM.LIBRARY"
               value: "{{ .Values.backend.processesworker.logging.bpdmLibrary }}"
-            - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CLEARINGHOUSE.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CLEARINGHOUSE.LIBRARY"
               value: "{{ .Values.backend.processesworker.logging.clearinghouseLibrary }}"
-            - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CUSTODIAN.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CUSTODIAN.LIBRARY"
               value: "{{ .Values.backend.processesworker.logging.custodianLibrary }}"
-            - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.SDFACTORY.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.SDFACTORY.LIBRARY"
               value: "{{ .Values.backend.processesworker.logging.sdfactoryLibrary }}"
             - name: "MAILINGSERVICE__MAIL__SMTPHOST"
               value: "{{ .Values.backend.mailing.host }}"
