chore: changed bpdm int address to correct value
Refs: CPLP-2997

--- a/consortia/environments/values-int.yaml
+++ b/consortia/environments/values-int.yaml
@@ -24,7 +24,7 @@ sharedidpAddress: "https://sharedidp.int.demo.catena-x.net"
 semanticsAddress: "https://semantics.int.demo.catena-x.net"
 dapsAddress: "https://drs.int.demo.catena-x.net"
 bpdmPartnersPoolAddress: "https://partners-pool.int.demo.catena-x.net"
-bpdmPortalGateAddress: "https://portal-gate.dev.demo.catena-x.net"
+bpdmPortalGateAddress: "https://portal-gate.int.demo.catena-x.net"
 custodianAddress: "https://managed-identity-wallets-new.int.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory.int.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
