--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -220,7 +220,7 @@ backend:
       issuerBpn: "BPNL00000003CRHK"
       clientId: "<path:portal/data/processes-worker#sdfactory-client-id>"
       clientSecret: "<path:portal/data/pen/processes-worker#sdfactory-client-secret>"
-    offerProvider:
+    offerprovider:
       clientId: "<path:portal/data/processes-worker#offerprovider-client-id>"
       clientSecret: "<path:portal/data/pen/processes-worker#offerprovider-client-secret>"
 
