--- a/consortia/environments/values-beta.yaml
+++ b/consortia/environments/values-beta.yaml
@@ -23,8 +23,8 @@ centralidpAddress: "https://centralidp.beta.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp.beta.demo.catena-x.net"
 semanticsAddress: "https://semantics.beta.demo.catena-x.net"
 dapsAddress: "https://drs.beta.demo.catena-x.net"
-bpdmPartnersPoolAddress: "https://partners-pool.beta.demo.catena-x.net"
-bpdmPortalGateAddress: "https://portal-gate.dev.demo.catena-x.net"
+bpdmPartnersPoolAddress: "https://business-partners.beta.demo.catena-x.net"
+bpdmPortalGateAddress: "https://business-partners.beta.demo.catena-x.net"
 custodianAddress: "https://managed-identity-wallets-new.beta.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory.beta.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
