--- a/consortia/environments/values-dev.yaml
+++ b/consortia/environments/values-dev.yaml
@@ -23,8 +23,8 @@ centralidpAddress: "https://centralidp.dev.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp.dev.demo.catena-x.net"
 semanticsAddress: "https://semantics.dev.demo.catena-x.net"
 dapsAddress: "https://drs.dev.demo.catena-x.net"
-bpdmPartnersPoolAddress: "https://partners-pool.dev.demo.catena-x.net"
-bpdmPortalGateAddress: "https://portal-gate.dev.demo.catena-x.net"
+bpdmPartnersPoolAddress: "https://business-partners.dev.demo.catena-x.net"
+bpdmPortalGateAddress: "https://business-partners.dev.demo.catena-x.net"
 custodianAddress: "https://managed-identity-wallets-new.dev.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory.dev.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
