--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -23,8 +23,8 @@ centralidpAddress: "https://centralidp-pen.dev.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp-pen.dev.demo.catena-x.net"
 semanticsAddress: "https://semantics-pen.dev.demo.catena-x.net"
 dapsAddress: "https://drs-pen.int.demo.catena-x.net"
-bpdmPartnersPoolAddress: "https://partners-pool-pen.dev.demo.catena-x.net"
-bpdmPortalGateAddress: "https://portal-gate-pen.dev.demo.catena-x.net"
+bpdmPartnersPoolAddress: "https://business-partners-pen.dev.demo.catena-x.net"
+bpdmPortalGateAddress: "https://business-partners-pen.dev.demo.catena-x.net"
 custodianAddress: "https://managed-identity-wallets-pen-new.dev.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory-pen.dev.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
