--- a/consortia/environments/values-stable.yaml
+++ b/consortia/environments/values-stable.yaml
@@ -23,8 +23,8 @@ centralidpAddress: "https://centralidp.stable.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp.stable.demo.catena-x.net"
 semanticsAddress: "https://semantics.stable.demo.catena-x.net"
 dapsAddress: "https://drs.stable.demo.catena-x.net"
-bpdmPartnersPoolAddress: "https://partners-pool.stable.demo.catena-x.net"
-bpdmPortalGateAddress: "https://portal-gate.stable.demo.catena-x.net"
+bpdmPartnersPoolAddress: "https://business-partners.stable.demo.catena-x.net"
+bpdmPortalGateAddress: "https://business-partners.stable.demo.catena-x.net"
 custodianAddress: "https://managed-identity-wallets-new.stable.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory.stable.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com/api/v1/validation"
