--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -289,6 +289,14 @@ spec:
               value: "{{ .Values.backend.processesworker.offerprovider.scope }}"
             - name: "OFFERPROVIDER__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
+            - name: "PROCESSIDENTITY__USERENTITYID"
+              value: "{{ .Values.backend.processesworker.processIdentity.userEntityId }}"
+            - name: "PROCESSIDENTITY__PROCESSUSERID"
+              value: "{{ .Values.backend.processesworker.processIdentity.processUserId }}"
+            - name: "PROCESSIDENTITY__IDENTITYTYPEID"
+              value: "{{ .Values.backend.processesworker.processIdentity.identityTypeId }}"
+            - name: "PROCESSIDENTITY__PROCESSUSERCOMPANYID"
+              value: "{{ .Values.backend.processesworker.processIdentity.processUserCompanyId }}"
             ports:
             - name: http
               containerPort: {{ .Values.portContainer }}
