--- a/charts/portal/templates/job-backend-portal-migrations.yaml
+++ b/charts/portal/templates/job-backend-portal-migrations.yaml
@@ -64,6 +64,14 @@ spec:
             value: "{{ .Values.backend.portalmigrations.seeding.testDataEnvironments }}"
           - name: "SEEDING__DATAPATHS__0"
             value: "{{ .Values.backend.portalmigrations.seeding.testDataPaths }}"
+          - name: "PROCESSIDENTITY__USERENTITYID"
+            value: "{{ .Values.backend.portalmigrations.processIdentity.userEntityId }}"
+          - name: "PROCESSIDENTITY__PROCESSUSERID"
+            value: "{{ .Values.backend.portalmigrations.processIdentity.processUserId }}"
+          - name: "PROCESSIDENTITY__IDENTITYTYPEID"
+            value: "{{ .Values.backend.portalmigrations.processIdentity.identityTypeId }}"
+          - name: "PROCESSIDENTITY__PROCESSUSERCOMPANYID"
+            value: "{{ .Values.backend.portalmigrations.processIdentity.processUserCompanyId }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
