--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -201,7 +201,7 @@ spec:
             - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
               value: "{{ .Values.sharedidpAddress }}"
             - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.PROCESSES.LIBRARY"
-              value: "{{ .Values.backend.processesworker.logging.checklistLibrary }}"
+              value: "{{ .Values.backend.processesworker.logging.processesLibrary }}"
             - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.BPDM.LIBRARY"
               value: "{{ .Values.backend.processesworker.logging.bpdmLibrary }}"
             - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CLEARINGHOUSE.LIBRARY"
