--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -200,6 +200,8 @@ spec:
                   key: "shared-client-secret"
             - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
               value: "{{ .Values.sharedidpAddress }}"
+            - name: "SERILOG__MINIMUMLEVEL__DEFAULT"
+              value: "{{ .Values.backend.processesworker.logging.default }}"
             - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.PROCESSES.LIBRARY"
               value: "{{ .Values.backend.processesworker.logging.processesLibrary }}"
             - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.BPDM.LIBRARY"
@@ -210,6 +212,8 @@ spec:
               value: "{{ .Values.backend.processesworker.logging.custodianLibrary }}"
             - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.SDFACTORY.LIBRARY"
               value: "{{ .Values.backend.processesworker.logging.sdfactoryLibrary }}"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.OFFERPROVIDER.LIBRARY"
+              value: "{{ .Values.backend.processesworker.logging.offerProvider }}"
             - name: "MAILINGSERVICE__MAIL__SMTPHOST"
               value: "{{ .Values.backend.mailing.host }}"
             - name: "MAILINGSERVICE__MAIL__SMTPPASSWORD"
