--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -281,6 +281,8 @@ spec:
               key: "shared-client-secret"
         - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
           value: "{{ .Values.sharedidpAddress }}"
+        - name: "SERILOG__MINIMUMLEVEL__DEFAULT"
+          value: "{{ .Values.backend.administration.logging.default }}"
         - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.ADMINISTRATION.SERVICE.BUSINESSLOGIC"
           value: "{{ .Values.backend.administration.logging.businessLogic }}"
         - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.SDFACTORY.LIBRARY"
