--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -123,6 +123,8 @@ spec:
               key: "shared-client-secret"
         - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
           value: "{{ .Values.sharedidpAddress }}"
+        - name: "SERILOG__MINIMUMLEVEL__DEFAULT"
+          value: "{{ .Values.backend.registration.logging.default }}"
         - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.REGISTRATION.SERVICE.BPN"
           value: "{{ .Values.backend.registration.logging.registrationServiceBpn }}"
         - name: "MAILINGSERVICE__MAIL__SMTPHOST"
