--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -115,6 +115,8 @@ spec:
               key: "shared-client-secret"
         - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
           value: "{{ .Values.sharedidpAddress }}"
+        - name: "SERILOG__MINIMUMLEVEL__DEFAULT"
+          value: "{{ .Values.backend.services.logging.default }}"
         - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.OFFERS.LIBRARY.SERVICE"
           value: "{{ .Values.backend.services.logging.offersLibrary }}"
         - name: "MAILINGSERVICE__MAIL__SMTPHOST"
