--- a/charts/portal/templates/job-backend-provisioning-migrations.yaml
+++ b/charts/portal/templates/job-backend-provisioning-migrations.yaml
@@ -60,6 +60,8 @@ spec:
           - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
             value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
           {{- end }}
+          - name: "SERILOG__MINIMUMLEVEL__DEFAULT"
+            value: "{{ .Values.backend.provisioningmigrations.logging.default }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
