--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -124,6 +124,7 @@ backend:
 
   registration:
     logging:
+      default: "Debug"
       registrationServiceBpn: "Debug"
     healthChecks:
       startup:
@@ -136,6 +137,7 @@ backend:
 
   administration:
     logging:
+      default: "Debug"
       businessLogic: "Debug"
       sdfactoryLibrary: "Debug"
     healthChecks:
@@ -164,6 +166,7 @@ backend:
 
   appmarketplace:
     logging:
+      default: "Debug"
       offersLibrary: "Debug"
     healthChecks:
       startup:
@@ -175,10 +178,14 @@ backend:
     swaggerEnabled: true
 
   portalmigrations:
+    logging:
+      default: "Debug"
     seeding:
       testDataEnvironments: "consortia"
 
   notification:
+    logging:
+      default: "Debug"
     healthChecks:
       startup:
         tags:
@@ -190,6 +197,7 @@ backend:
 
   services:
     logging:
+      default: "Debug"
       offersLibrary: "Debug"
     healthChecks:
       startup:
@@ -202,11 +210,13 @@ backend:
 
   processesworker:
     logging:
+      default: "Debug"
       processesLibrary: "Debug"
       bpdmLibrary: "Debug"
       clearinghouseLibrary: "Debug"
       custodianLibrary: "Debug"
       sdfactoryLibrary: "Debug"
+      offerProvider: "Debug"
     bpdm:
       clientId: "<path:portal/data/processes-worker#bpdm-client-id>"
       clientSecret: "<path:portal/data/pen/processes-worker#bpdm-client-secret>"
