fix(logging): changing logging to case sensitive values

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -200,19 +200,19 @@ spec:
                   key: "shared-client-secret"
             - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
               value: "{{ .Values.sharedidpAddress }}"
-            - name: "SERILOG__MINIMUMLEVEL__DEFAULT"
+            - name: "SERILOG__MINIMUMLEVEL__Default"
               value: "{{ .Values.backend.processesworker.logging.default }}"
-            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.PROCESSES.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Process.Library"
               value: "{{ .Values.backend.processesworker.logging.processesLibrary }}"
-            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.BPDM.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Bpdm.Library"
               value: "{{ .Values.backend.processesworker.logging.bpdmLibrary }}"
-            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CLEARINGHOUSE.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Clearinghouse.Library"
               value: "{{ .Values.backend.processesworker.logging.clearinghouseLibrary }}"
-            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CUSTODIAN.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Custodian.Library"
               value: "{{ .Values.backend.processesworker.logging.custodianLibrary }}"
-            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.SDFACTORY.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.SdFactory.Library"
               value: "{{ .Values.backend.processesworker.logging.sdfactoryLibrary }}"
-            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.OFFERPROVIDER.LIBRARY"
+            - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.OfferProvider.Library"
               value: "{{ .Values.backend.processesworker.logging.offerProvider }}"
             - name: "MAILINGSERVICE__MAIL__SMTPHOST"
               value: "{{ .Values.backend.mailing.host }}"
