--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -115,9 +115,9 @@ spec:
               key: "shared-client-secret"
         - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
           value: "{{ .Values.sharedidpAddress }}"
-        - name: "SERILOG__MINIMUMLEVEL__DEFAULT"
+        - name: "SERILOG__MINIMUMLEVEL__Default"
           value: "{{ .Values.backend.services.logging.default }}"
-        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.OFFERS.LIBRARY.SERVICE"
+        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Offers.Library.Service"
           value: "{{ .Values.backend.services.logging.offersLibrary }}"
         - name: "MAILINGSERVICE__MAIL__SMTPHOST"
           value: "{{ .Values.backend.mailing.host }}"
