--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -123,9 +123,9 @@ spec:
               key: "shared-client-secret"
         - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
           value: "{{ .Values.sharedidpAddress }}"
-        - name: "SERILOG__MINIMUMLEVEL__DEFAULT"
+        - name: "SERILOG__MINIMUMLEVEL__Default"
           value: "{{ .Values.backend.registration.logging.default }}"
-        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.REGISTRATION.SERVICE.BPN"
+        - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Registration.Service.Bpn"
           value: "{{ .Values.backend.registration.logging.registrationServiceBpn }}"
         - name: "MAILINGSERVICE__MAIL__SMTPHOST"
           value: "{{ .Values.backend.mailing.host }}"
